style : icone marque choisi, choisir marque dans user, card alignement fix, date inscription fix et creation nouveau utils

--- a/src/components/shared/ReportActionsBar.scss
+++ b/src/components/shared/ReportActionsBar.scss
@@ -130,6 +130,18 @@
             color: #111827;
           }
         }
+
+        span {
+          .partager-span-btn {
+            margin-top: 1px;
+          }
+          .commenter-span-btn {
+            margin-top: 1px;
+          }
+          .reagir-span-btn {
+            margin-top: 3px;
+          }
+        }
       }
     }
 
